--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,15 @@
 [package]
-name = "hello-rust"
+name = "chat"
 version = "0.1.0"
+authors = ["Kenta Iwasaki <kenta@perlin.net>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[profile.release]
+lto = true
+
+[lib]
+crate-type = ["cdylib"]
 
 [dependencies]
-ferris-says = "0.2"
+smart-contract = "0.2.0"
+smart-contract-macros = "0.2.0"
